--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 Changes for Perl extension Padre-Plugin-Swarm
+0.05 - Sun Dec 13 19:51:51 EST 2009
+	- add 'Run in other editor' feature 
+	- chat text restyled
+	- chat accept message type 'promote' 
+	- Replaced debug called with new TRACE() call
 0.04 - Wed Nov  4 17:36:05 EST 2009
 	- test updates
 	- version boilerplate (BRAMBLE) 
