--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
 Changes for Perl extension Padre-Plugin-Swarm
+0.07 - Sun Jan 17 19:48:09 EST 2010
+	- allow document stealing
+        - observe other swarm users open editor documents
+        - hook editor_enable/disable and announce documents open/close
+        - add swarm resource tree next to directory/project tree
+        - remove deps on IO::Interface
+	- pass incoming swarm messages as Wx events
+        - internal reworking
 0.06 
 	- add feature Open in Other Editor
 	- attempt to select a usable multicast interface
