--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
 Changes for Perl extension Padre-Plugin-Swarm
+0.093 -
+	- extend the plugin pod and chat pod
+	- hackish keepalive on global transport wxsocket
+	- fix wx flags on chat control to behave on win32
+	- fix json decoding bug with large messages
+	- make chat text font fixed-width
+	- add tab completion of nickname in chat text entry
 0.092 - Sat Feb 13 13:47:38 EST 2010
 	- remove references to packages lost after refactor
 	- skip compile tests without DISPLAY 
