--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Changes for Perl extension Padre-Plugin-Swarm
-0.093 -
+0.094 - 
+        - fix (1) bug causing crash when disabling plugin
+	- convert multicast service to new Task API
+	- add timestamps to chat window
+	- fix JSON parsing in WxSocket transport
+0.093 - Sat Feb 13 23:14:23  EST 2010
 	- extend the plugin pod and chat pod
 	- hackish keepalive on global transport wxsocket
 	- fix wx flags on chat control to behave on win32
